--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-* {
+
+
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(236, 227, 206);
 }
@@ -15,6 +17,16 @@ h3 {
     color: rgb(58, 77, 57);
 }
 
+span {
+    font-weight: bold;
+}
+
+.border {
+    background: rgb(58, 77, 57);
+    height: 4px;
+    border: 0cap;
+}
+
 .vegan-buttermilk-pancakes {
     height: auto;
     width: 600px;
@@ -24,6 +36,3 @@ h3 {
     text-align: center;
 }
 
-.home-button {
-    color: orange;
-}
